--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,13 @@
 body {
   background-color: #333;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 15px;
+  line-height: 1.2;
 }
 
 .container {
   margin: 0 auto;
-  width: 700px;
+  width: 420px;
 }
 
 nav {
@@ -20,20 +21,30 @@ nav {
   padding: 10px 0 15px 15px;
   position: fixed;
   width: 420px;
+  background-color: black;
 }
 
 .restaurant-list {
-  padding-top: 50px;
+  padding-top: 45px;
   width: 100%;
+  background-color: lightgrey;
+}
+
+.content {
+  display: inline-block;
 }
 
 .content h1 {
-  color: dodgerblue;
+  color: black;
   font-weight: bold;
 }
 
+.arrow {
+  float: right;
+}
+
 .content h3 {
-  color: white;
+  color: black;
   font-weight: lighter;
 }
 
@@ -42,5 +53,6 @@ nav {
 }
 
 .location {
-  padding: 15px;
+  padding: 25px;
+  border-top: 1px solid black;
 }
